updated position fixed to overflowy hidden on body to prevent mobile menus from not stretching full width

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body {
   font-family: "Kanit", sans-serif;
 }
 .noscroll {
-  position: fixed;
+  overflow-y: hidden;
 }
 #main {
   min-height: 100vh;
